--- a/user_admin/listTreatment_detail_done_edited.html
+++ b/user_admin/listTreatment_detail_done_edited.html
@@ -367,7 +367,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
-												<a href="user_admin/listTreatment_detail_done.html" class="btn btn-link toolbar-absolute" data-toggle="kt-tooltip" data-placement="top" title data-original-title="Lihat sebelum diubah"><span><i class="fa fa-eye"></i> Non-Edited</a>
+												<a href="user_admin/listTreatment_detail_done.html" class="btn btn-link btn-outline-hover-brand toolbar-absolute" data-toggle="kt-tooltip" data-placement="top" title data-original-title="Lihat sebelum diubah"><span><i class="fa fa-eye"></i> Sebelum Edit</a>
 											</div>
 										</div>
 										<div class="tab-content">
