Admin tambah pengeluaran dropdown

--- a/user_admin/finance_pengeluaran_detail_edit.html
+++ b/user_admin/finance_pengeluaran_detail_edit.html
@@ -320,6 +320,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_admin/finance_pengeluaran_detail.html" class="kt-subheader__breadcrumbs-link">
 											Detail Pengeluaran </a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_admin/finance_pengeluaran_detail_edit.html" class="kt-subheader__breadcrumbs-link">
+											Detail Pengeluaran Editting </a>
 									</div>
 								</div>
 							</div>
