--- a/user_admin/finance_pengeluaran.html
+++ b/user_admin/finance_pengeluaran.html
@@ -385,7 +385,13 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-2 col-form-label">Kategori</label>
                                                     <div class="col-10">
-                                                        <input type="text" class="form-control" name="pengeluaran_kategori" placeholder="Kategori">
+														<select name="pengeluaran_kategori" class="form-control">
+							                                <option value="" selected disabled>Kategori</option>
+							                                <option>Lorem ipsum</option>
+							                                <option>Lorem ipsum</option>
+							                                <option>Lorem ipsum</option>
+							                                <option>Lorem ipsum</option>
+							                            </select>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
