--- a/user_superadmin/treatment_detail_done.html
+++ b/user_superadmin/treatment_detail_done.html
@@ -397,7 +397,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                            <div class="row" style="margin-bottom:20px;">
 														<div class="col-6">
 			                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-			                                                <a href="#"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+			                                                <a href="user_superadmin/customer_detail"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 														</div>
@@ -446,7 +446,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                            <div class="row" style="margin-bottom:20px;">
 														<div class="col-6">
 			                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-															<a href="#"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+			                                                <a href="user_superadmin/customer_detail"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 														</div>
