Clickable and pinjaman fixed misunderstood

--- a/user_supervisor_studio/treatment_detail_ongoing.html
+++ b/user_supervisor_studio/treatment_detail_ongoing.html
@@ -369,7 +369,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             <div class="row" style="margin-bottom:20px;">
 												<div class="col-6">
 	                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-													<a href="user_supervisor_studio/customer_detail"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+													<a href="user_supervisor_studio/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
 	                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 	                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 												</div>
