--- a/user_superadmin/hr_laporan.html
+++ b/user_superadmin/hr_laporan.html
@@ -345,6 +345,16 @@ License: You must have a valid license purchased only from themeforest(the above
 											Laporan karyawan </a>
 									</div>
 								</div>
+								<div class="kt-subheader__toolbar">
+									<select class="form-control kt-select2" id="filter_studio" name="filter_studio" style="min-width: 250px">
+										<option></option>
+										<option>Studio Cabang Hasanuddin</option>
+										<option>Studio Cabang Dg. Tata</option>
+										<option>Studio Cabang Hasanuddin</option>
+										<option>Studio Cabang Dg. Tata</option>
+										<option>Studio Cabang Hasanuddin</option>
+									</select>
+								</div>
 							</div>
 						</div>
 
@@ -353,18 +363,17 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row justify-space-between kt-margin-0">
-                                <h4 class="vertical-align" style="margin-bottom: 20px;">Laporan Karyawan</h4>
-                                <div class="col-lg-4 col-sm-6" style="padding:unset;margin-bottom: 20px;">
-									<select class="form-control" id="exampleSelectd">
-										<option value="" selected disabled>Pilih Studio</option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-									</select>
-                                </div>
+							<div class="kt-portlet kt-portlet--mobile">
+								<div class="kt-portlet__head centered-content">
+									<div class="kt-portlet__head-label">
+										<span class="kt-portlet__head-icon">
+											<i class="flaticon2-cube-1"></i>
+										</span>
+										<h3 class="kt-portlet__head-title">
+											Laporan Karyawan</span>
+										</h3>
+									</div>
+								</div>
 							</div>
 
 							<div class="row">
@@ -532,6 +541,11 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<script>
+			// Filter Select2
+			$('#filter_studio').select2({
+				placeholder: "Pilih Studio",
+				allowClear: true
+			});
 			am4core.ready(function() {
 
 			// Themes begin
