--- a/user_superadmin/inventory_studio.html
+++ b/user_superadmin/inventory_studio.html
@@ -346,6 +346,16 @@ License: You must have a valid license purchased only from themeforest(the above
 											Inventory studio </a>
 									</div>
 								</div>
+								<div class="kt-subheader__toolbar">
+									<select class="form-control kt-select2" id="filter_studio" name="filter_studio" style="min-width: 250px">
+										<option></option>
+										<option>Studio Cabang Hasanuddin</option>
+										<option>Studio Cabang Dg. Tata</option>
+										<option>Studio Cabang Hasanuddin</option>
+										<option>Studio Cabang Dg. Tata</option>
+										<option>Studio Cabang Hasanuddin</option>
+									</select>
+								</div>
 							</div>
 						</div>
 
@@ -371,12 +381,6 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<select class="col-sm-12 kt-margin-b-20 form-control" name="inventory_studio" id="inventory_studio">
-												<option disabled selected>Choose Studio</option>
-												<option>Studio A</option>
-												<option>Studio B</option>
-												<option>Studio C</option>
-											</select>
                                             <table class="table table-bordered table-hover table-checkable" id="table_inventory_studio"></table>
 										</div>
 									</div>
@@ -462,6 +466,14 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_superadmin.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
+
+		<script>
+			// Filter Select2
+			$('#filter_studio').select2({
+	            placeholder: "Pilih Studio",
+				allowClear: true
+	        });
+		</script>
 
 		<!--end::Page Scripts -->
 	</body>
