Print invoice, spk and request inventory yang tahap akhir, dan few clickable therapist di inventory request detail

--- a/user_supervisor_studio/request_in_detail_request.html
+++ b/user_supervisor_studio/request_in_detail_request.html
@@ -353,7 +353,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             <div class="row" style="margin-bottom: 30px;">
 												<div class="col-12 kt-margin-b-20">
 	                                                <h5 class="color-main-dark" name="kode_request">#123456</h5>
-	                                                <span class="kt-font-bold">Therapist : <a href="#"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a></span>
+	                                                <span class="kt-font-bold">Therapist : <a href="user_supervisor_studio/karyawan_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a></span>
 												</div>
 												<div class="col-6" style="padding-right:0px;">
 	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
