--- a/user_gudang/request_stock_detail_diterima.html
+++ b/user_gudang/request_stock_detail_diterima.html
@@ -328,11 +328,20 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div class="row" style="margin-bottom: 50px;">
-												<div class="col-12 kt-margin-b-20">
+											<div class="row" style="margin-bottom:20px;">
+												<div class="col-6">
 	                                                <h5 class="color-main-dark" name="kode_request">#123456</h5>
 	                                                <span class="kt-font-bold"name="studio_request">Studio Cabang Dg Tata</span>
 												</div>
+												<div class="col-6">
+													<div class="row">
+														<div class="col-12" style="text-align: right; margin-bottom:5px;">
+															<button class="col-4 btn btn-warning" onclick="printFunction()">Print</button>
+														</div>
+													</div>
+												</div>
+                                            </div>
+                                            <div class="row" style="margin-bottom: 50px;">
 												<div class="col-4" style="padding-right:0px;">
 	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
 												</div>
