--- a/user_superadmin/treatment_detail_done.html
+++ b/user_superadmin/treatment_detail_done.html
@@ -383,26 +383,29 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 
 								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
-									<div class="tab-content">
-										<div class="tab-pane active" id="tab-spk" role="tabpanel">
-											<div class="kt-portlet kt-portlet--mobile" id="print-section">
-												<div class="kt-portlet__head centered-content">
-													<div class="kt-portlet__head-label">
-														<h3 class="kt-portlet__head-title">
-															Treatment Details
-														</h3>
-													</div>
-												</div>
+									<div class="kt-portlet kt-portlet--mobile" id="print-section">
+										<div class="kt-portlet__head centered-content">
+											<div class="kt-portlet__head-label">
+												<h3 class="kt-portlet__head-title">
+													Treatment Details
+												</h3>
+											</div>
+										</div>
+										<div class="tab-content">
+											<div class="tab-pane active" id="tab-spk" role="tabpanel">
 												<div class="kt-portlet__body">
 		                                            <div class="row" style="margin-bottom:20px;">
 														<div class="col-6">
 			                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-			                                                <a href="user_superadmin/customer_detail"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+			                                                <a href="user_superadmin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 														</div>
 														<div class="col-6">
 															<div class="row">
+																<div class="col-12" style="text-align: right; margin-bottom:5px;">
+																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
+																</div>
 															</div>
 														</div>
 		                                            </div>
@@ -432,21 +435,12 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                            </div>
 												</div>
 											</div>
-										</div>
-										<div class="tab-pane" id="tab-invoice" role="tabpanel">
-											<div class="kt-portlet kt-portlet--mobile" id="print-section">
-												<div class="kt-portlet__head centered-content">
-													<div class="kt-portlet__head-label">
-														<h3 class="kt-portlet__head-title">
-															Treatment Details
-														</h3>
-													</div>
-												</div>
+											<div class="tab-pane" id="tab-invoice" role="tabpanel">
 												<div class="kt-portlet__body">
 		                                            <div class="row" style="margin-bottom:20px;">
 														<div class="col-6">
 			                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-			                                                <a href="user_superadmin/customer_detail"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+			                                                <a href="user_superadmin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 														</div>
