--- a/user_supervisor_studio/request_in_detail_disetujui.html
+++ b/user_supervisor_studio/request_in_detail_disetujui.html
@@ -350,11 +350,20 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div class="row" style="margin-bottom: 50px;">
-												<div class="col-12 kt-margin-b-20">
-	                                                <h5 class="color-main-dark" name="kode_request">#123456</h5>
-	                                                <span class="kt-font-bold">Therapist : <a href="#"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a></span>
+											<div class="row" style="margin-bottom:20px;">
+												<div class="col-6">
+													<h5 class="color-main-dark" name="kode_request">#123456</h5>
+	                                                <span class="kt-font-bold">Therapist : <a href="user_supervisor_studio/karyawan_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a></span>
 												</div>
+												<div class="col-6">
+													<div class="row">
+														<div class="col-12" style="text-align: right; margin-bottom:5px;">
+															<button class="col-4 btn btn-warning" onclick="printFunction()">Print</button>
+														</div>
+													</div>
+												</div>
+                                            </div>
+                                            <div class="row" style="margin-bottom: 50px;">
 												<div class="col-6" style="padding-right:0px;">
 	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
 												</div>
