--- a/user_supervisor_studio/treatment_detail_done.html
+++ b/user_supervisor_studio/treatment_detail_done.html
@@ -362,16 +362,16 @@ License: You must have a valid license purchased only from themeforest(the above
 								</div>
 
 								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
-									<div class="tab-content">
-										<div class="tab-pane active" id="tab-spk" role="tabpanel">
-											<div class="kt-portlet kt-portlet--mobile" id="print-section">
-												<div class="kt-portlet__head centered-content">
-													<div class="kt-portlet__head-label">
-														<h3 class="kt-portlet__head-title">
-															Treatment Details
-														</h3>
-													</div>
-												</div>
+									<div class="kt-portlet kt-portlet--mobile" id="print-section">
+										<div class="kt-portlet__head centered-content">
+											<div class="kt-portlet__head-label">
+												<h3 class="kt-portlet__head-title">
+													Treatment Details
+												</h3>
+											</div>
+										</div>
+										<div class="tab-content">
+											<div class="tab-pane active" id="tab-spk" role="tabpanel">
 												<div class="kt-portlet__body">
 		                                            <div class="row" style="margin-bottom:20px;">
 														<div class="col-6">
@@ -382,6 +382,9 @@ License: You must have a valid license purchased only from themeforest(the above
 														</div>
 														<div class="col-6">
 															<div class="row">
+																<div class="col-12" style="text-align: right; margin-bottom:5px;">
+																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
+																</div>
 															</div>
 														</div>
 		                                            </div>
@@ -411,16 +414,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                            </div>
 												</div>
 											</div>
-										</div>
-										<div class="tab-pane" id="tab-invoice" role="tabpanel">
-											<div class="kt-portlet kt-portlet--mobile" id="print-section">
-												<div class="kt-portlet__head centered-content">
-													<div class="kt-portlet__head-label">
-														<h3 class="kt-portlet__head-title">
-															Treatment Details
-														</h3>
-													</div>
-												</div>
+											<div class="tab-pane" id="tab-invoice" role="tabpanel">
 												<div class="kt-portlet__body">
 		                                            <div class="row" style="margin-bottom:20px;">
 														<div class="col-6">
