--- a/user_therapist/inventory_request_detail_disetujui.html
+++ b/user_therapist/inventory_request_detail_disetujui.html
@@ -325,8 +325,19 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
+											<div class="row" style="margin-bottom:20px;">
+												<div class="col-6">
+													<h5 class="color-main-dark" name="kode_request">#123456</h5>
+												</div>
+												<div class="col-6">
+													<div class="row">
+														<div class="col-12" style="text-align: right; margin-bottom:5px;">
+															<button class="col-4 btn btn-warning" onclick="printFunction()">Print</button>
+														</div>
+													</div>
+												</div>
+                                            </div>
                                             <div class="row" style="margin-bottom: 50px;">
-                                                <h5 class="col-12 color-main-dark" name="kode_request" style="margin-bottom: 20px;">#123456</h5>
 												<div class="col-6" style="padding-right:0px;">
 	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
 												</div>
