--- a/user_gudang/request_stock_detail_request.html
+++ b/user_gudang/request_stock_detail_request.html
@@ -369,7 +369,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</div>
 												<div class="form-group form-group-last">
 													<label class="kt-margin-b-15" for="request_notes">Notes: </label>
-													<textarea class="form-control readonly" id="request_notes" name="request_notes" rows="3" readonly>Lorem ipsum dolor sit amet</textarea>
+													<textarea class="form-control" id="request_notes" name="request_notes" rows="3" readonly>Lorem ipsum dolor sit amet</textarea>
 												</div>
 	                                            <div style="text-align: center; margin-top: 30px">
 	                                                <button type="submit" class="btn btn-success" id="kt_sweetalert_request_berhasil">Submit</button>
