--- a/user_gudang/stock_pembelian_detail.html
+++ b/user_gudang/stock_pembelian_detail.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Detail Request Stock | Gudang Fabulash</title>
+		<title>Detail Pembelian Stock | Gudang Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -134,7 +134,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
 										<path d="M4,9.67471899 L10.880262,13.6470401 C10.9543486,13.689814 11.0320333,13.7207107 11.1111111,13.740321 L11.1111111,21.4444444 L4.49070127,17.526473 C4.18655139,17.3464765 4,17.0193034 4,16.6658832 L4,9.67471899 Z M20,9.56911707 L20,16.6658832 C20,17.0193034 19.8134486,17.3464765 19.5092987,17.526473 L12.8888889,21.4444444 L12.8888889,13.6728275 C12.9050191,13.6647696 12.9210067,13.6561758 12.9368301,13.6470401 L20,9.56911707 Z" id="Combined-Shape" fill="#000000" />
@@ -144,11 +144,11 @@ License: You must have a valid license purchased only from themeforest(the above
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/stock_total.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Total Stock</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/stock_history.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">History In Out</span></a></li>
+											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_gudang/stock_history.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">History In Out</span></a></li>
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_gudang/request_stock.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item" aria-haspopup="true"><a href="user_gudang/request_stock.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect id="bound" x="0" y="0" width="24" height="24"/>
 								        <path d="M10.9,2 C11.4522847,2 11.9,2.44771525 11.9,3 C11.9,3.55228475 11.4522847,4 10.9,4 L6,4 C4.8954305,4 4,4.8954305 4,6 L4,18 C4,19.1045695 4.8954305,20 6,20 L18,20 C19.1045695,20 20,19.1045695 20,18 L20,16 C20,15.4477153 20.4477153,15 21,15 C21.5522847,15 22,15.4477153 22,16 L22,18 C22,20.209139 20.209139,22 18,22 L6,22 C3.790861,22 2,20.209139 2,18 L2,6 C2,3.790861 3.790861,2 6,2 L10.9,2 Z" id="Path-57" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -290,17 +290,20 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
 
 						<!-- begin:: Content Head -->
-                        <div class="kt-subheader  kt-grid__item" id="kt_subheader">
+						<div class="kt-subheader  kt-grid__item" id="kt_subheader">
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
-                                    <h3 class="kt-subheader__title">
-										Request Stock </h3>
+									<h3 class="kt-subheader__title">
+										Stock </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_gudang/request_stock.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_gudang/stock_history.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_gudang/request_stock_detail_terkirim.html" class="kt-subheader__breadcrumbs-link">
-											Detail request stock </a>
+										<a href="user_gudang/stock_history.html" class="kt-subheader__breadcrumbs-link">
+											History In Out </a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_gudang/stock_pembelian_detail.html" class="kt-subheader__breadcrumbs-link">
+											Detail Pembelian </a>
 									</div>
 								</div>
 							</div>
@@ -309,7 +312,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
-                        <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
                             <div class="row justify-content-center">
 
@@ -323,55 +326,45 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													New Request
+													Tambah Stock
 												</h3>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div class="row" style="margin-bottom: 50px;">
-												<div class="col-12 kt-margin-b-20">
+											<div class="row" style="margin-bottom:20px;">
+												<div class="col-6">
 	                                                <h5 class="color-main-dark" name="kode_request">#123456</h5>
 	                                                <span class="kt-font-bold"name="studio_request">Studio Cabang Dg Tata</span>
 												</div>
-												<div class="col-4" style="padding-right:0px;">
-	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
-												</div>
-												<div class="col-4" style="padding-left:0px; padding-right:0px; text-align:center;">
-	                                                <span class="kt-font-bold">Date Terkirim : <span name="date_approve">15 November 2019</span></span>
-												</div>
-												<div class="col-4" style="padding-left:0px;text-align:right;">
-	                                                <span class="kt-font-bold">Date Diterima : <span name="date_approve">-</span></span>
-												</div>
-                                            </div>
-                                            <div class="justify-center kt-margin-b-20">
-                                                <span class="kt-margin-10 kt-font-bold kt-font-brand">Request</span><i class="flaticon2-next" style="padding: 10px 0px;"></i>
-                                                <span class="kt-margin-10 kt-font-bold kt-font-brand">Terkirim</span><i class="flaticon2-next" style="padding: 10px 0px;"></i>
-                                                <span class="kt-margin-10">Diterima</span>
-                                            </div>
-											<form id="kt_form_request_barang">
-												<div class="kt-margin-b-20">
-													<label class="kt-margin-b-15" style="font-size: 1rem;font-weight: 400;">Item List : </label>
-													<div class="table-responsive">
-														<table class="table table-bordered table-hover well-align-table table-mobile" role="grid" id="table_request_stock_detail_terkirim">
-															<thead>
-			                                                    <tr role="row">
-			                                                        <th style="width: 5%">No</th>
-			                                                        <th style="width: 25%">Barang</th>
-			                                                        <th style="width: 15%">Satuan</th>
-			                                                        <th style="width: 12.5%">Request</th>
-			                                                        <th style="width: 12.5%">Terkirim</th>
-			                                                        <th style="width: 12.5%">Diterima</th>
-			                                                        <th style="width: 17.5%">Margin Hilang</th>
-			                                                    </tr>
-			                                                </thead>
-			                                            </table>
+												<div class="col-6">
+													<div class="row">
+														<div class="col-12" style="text-align: right; margin-bottom:5px;">
+															<button class="col-4 btn btn-warning" onclick="printFunction()">Print</button>
+														</div>
 													</div>
 												</div>
-												<div class="form-group form-group-last">
-													<label class="kt-margin-b-15" for="request_notes">Notes: </label>
-													<textarea class="form-control" id="request_notes" name="request_notes" rows="3" readonly>Lorem ipsum dolor sit amet</textarea>
+                                            </div>
+											<div class="kt-margin-b-20">
+												<label class="kt-margin-b-15" style="font-size: 1rem;font-weight: 400;">Item List : </label>
+												<div class="table-responsive">
+													<table class="table table-bordered table-hover well-align-table table-mobile" role="grid" id="table_pembelian_detail">
+		                                                <thead>
+															<tr role="row">
+		                                                        <th style="width: 5%">No</th>
+		                                                        <th style="width: 22.5%">Nama Barang</th>
+		                                                        <th style="width: 17.5%">Jumlah<br>(Satuan Besar)</th>
+		                                                        <th style="width: 15%">Jumlah<br>(Satuan Sedang)</th>
+		                                                        <th style="width: 15%">Jumlah<br>(Satuan Kecil)</th>
+		                                                        <th style="width: 20%">Harga</th>
+		                                                    </tr>
+		                                                </thead>
+		                                            </table>
 												</div>
-											</form>
+											</div>
+											<div class="form-group form-group-last">
+												<label class="kt-margin-b-15" for="request_notes">Notes: </label>
+												<textarea class="form-control" id="request_notes" name="request_notes" rows="3" placeholder="Notes" readonly>Lorem ipsum dolor sit amet</textarea>
+											</div>
 										</div>
 									</div>
 
